--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ html{
     -webkit-text-size-adjust: 100%;
 }
 *{
-	margin: 0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -16,9 +16,10 @@ body {
     display: grid;
     grid-template-rows: 1fr auto;
     /*height: 100vh;*/
-	font-family: 'Questrial', sans-serif;
-	
+    font-family: 'Questrial', sans-serif;
+    
 }
+/*might need attributes for DIV*/
 a, ul {
     text-decoration: none;
 }
@@ -33,8 +34,9 @@ a.write{
 }
 
 body.content{
-    flex: 1 0 auto;
+    /*flex: 1 0 auto;
     position: relative;
+    */
 }
 img.profile-picture{
     display: block;
@@ -53,7 +55,6 @@ li {
 .background-footer{
     grid-row-start: 2;
     grid-row-end: 3;
-    position: absolute;
     bottom: 0px;
     left: 0px;
     right: 0px;
@@ -93,11 +94,51 @@ ul {
     background-color: rgb(226, 233, 238);
 }
 .background-shape{
-    background: url("file:///Volumes/Becky/BerkeleyOnlineTutors/GitHub/portfolio/static/img/backgroundShape.tiff");
+    background-image: url("../img/backgroundShape.tiff");
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
 }
-.background-shape:after{
-   background: url('../img/self.jpg');
-    opacity: 0.25;
+.drawings_background{
+    -webkit-background-clip:text;
+    -webkit-text-fill-color: transparent;
+    background-image: url("../img/drawing1.JPG");
+    background-size: contain;
+    color: black;
+}
+.drawings_background2{
+    -webkit-background-clip:text;
+    -webkit-text-fill-color: transparent;
+
+    background-image: url("../img/drawing2.JPG");
+    background-size: contain;
+    color: black;
+}
+.drawings_background3{
+    -webkit-background-clip:text;
+    -webkit-text-fill-color: transparent;
+
+    background-image: url("../img/drawing2.JPG");
+    background-size: contain;
+    color: black;
+}
+.drawings_background4{
+   -webkit-background-clip:text;
+    -webkit-text-fill-color: transparent;
+
+    background-image: url("../img/drawing1.JPG");
+    background-size: contain;
+    color: black;
+}
+.drawing_title_text{
+    margin: 0 400px 0 0;
+    font-family: 'Anton';
+    font-size: 77px;
+    text-align: center;
+}
+.drawing_thumnails{
+    width:  40%;
+    height: 100%;
 }
 .fade {
    opacity: 1;
@@ -109,10 +150,11 @@ ul {
       opacity: 0.5;
 }
 .heading{
-	font-family: 'Raleway', sans-serif;
-	font-weight: 100;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 100;
     font-size: 44px;
-	text-align:	center;
+    text-align: center;
+    font-weight: bold;
 }
 .heading-sub{
     font-family: 'Raleway', sans-serif;
@@ -123,9 +165,9 @@ ul {
 }
 .known-lang{ 
     padding-top: 5px;
-	font-size: 15px;
-	text-align: center;
-	font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
 
 }
 .program-cta{
@@ -162,7 +204,6 @@ ul {
 }
 .program-list{
     align-items: stretch;
-
     margin: 0;
     padding: 0;
     list-style: none;
@@ -182,8 +223,8 @@ ul {
 }
 .program-list-section{
     background-color: rgb(226, 233, 238);
-    padding-top: 85px;
-    padding-bottom: 175px;
+    padding-top: 55px;
+    padding-bottom: 75px;
 }
 .program-image{
     width: 320px;
